HW/HW2/results/nelsonnathanael_results.txt
module-info.java:7: warning: [module] module name component hw3 should avoid terminal digits
module hw3 {
       ^
1 warning
test.java:3: error: package polynomial does not exist
import polynomial.LinearPolynomial;
                 ^
test.java:4: error: package polynomial does not exist
import polynomial.Polynomial;
                 ^
test.java:5: error: package polynomial does not exist
import polynomial.QuadraticPolynomial;
                 ^
test.java:9: error: cannot find symbol
	public static Polynomial[] testPolynomials = null;
	              ^
  symbol:   class Polynomial
  location: class test
module-info.java:7: warning: [module] module name component hw3 should avoid terminal digits
module hw3 {
       ^
test.java:76: error: cannot find symbol
		LinearPolynomial l1 = new LinearPolynomial(5, 2);
		^
  symbol:   class LinearPolynomial
  location: class test
test.java:76: error: cannot find symbol
		LinearPolynomial l1 = new LinearPolynomial(5, 2);
		                          ^
  symbol:   class LinearPolynomial
  location: class test
test.java:78: error: cannot find symbol
		QuadraticPolynomial q1 = new QuadraticPolynomial(1, -1, -12);
		^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:78: error: cannot find symbol
		QuadraticPolynomial q1 = new QuadraticPolynomial(1, -1, -12);
		                             ^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:79: error: cannot find symbol
		QuadraticPolynomial q2 = new QuadraticPolynomial(2, 4, 7);
		^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:79: error: cannot find symbol
		QuadraticPolynomial q2 = new QuadraticPolynomial(2, 4, 7);
		                             ^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:80: error: cannot find symbol
		QuadraticPolynomial q3 = new QuadraticPolynomial(1, -10, 25);
		^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:80: error: cannot find symbol
		QuadraticPolynomial q3 = new QuadraticPolynomial(1, -10, 25);
		                             ^
  symbol:   class QuadraticPolynomial
  location: class test
test.java:98: error: cannot find symbol
		Polynomial p0 = new Polynomial(new int[] {-6, 4, -3, 1, 2});
		^
  symbol:   class Polynomial
  location: class test
test.java:98: error: cannot find symbol
		Polynomial p0 = new Polynomial(new int[] {-6, 4, -3, 1, 2});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:99: error: cannot find symbol
		Polynomial p1 = new Polynomial(new int[] {4});
		^
  symbol:   class Polynomial
  location: class test
test.java:99: error: cannot find symbol
		Polynomial p1 = new Polynomial(new int[] {4});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:100: error: cannot find symbol
		Polynomial p2 = new Polynomial(new int[] {0,4});
		^
  symbol:   class Polynomial
  location: class test
test.java:100: error: cannot find symbol
		Polynomial p2 = new Polynomial(new int[] {0,4});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:101: error: cannot find symbol
		Polynomial p3 = new Polynomial(new int[] {3,-1});
		^
  symbol:   class Polynomial
  location: class test
test.java:101: error: cannot find symbol
		Polynomial p3 = new Polynomial(new int[] {3,-1});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:102: error: cannot find symbol
		Polynomial p4 = new Polynomial(new int[] {0,3,0});
		^
  symbol:   class Polynomial
  location: class test
test.java:102: error: cannot find symbol
		Polynomial p4 = new Polynomial(new int[] {0,3,0});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:103: error: cannot find symbol
		Polynomial p5 = new Polynomial(new int[] {0,3,0,0});
		^
  symbol:   class Polynomial
  location: class test
test.java:103: error: cannot find symbol
		Polynomial p5 = new Polynomial(new int[] {0,3,0,0});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:104: error: cannot find symbol
		Polynomial p6 = new Polynomial(new int[] {0,0,-2,0});
		^
  symbol:   class Polynomial
  location: class test
test.java:104: error: cannot find symbol
		Polynomial p6 = new Polynomial(new int[] {0,0,-2,0});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:105: error: cannot find symbol
		Polynomial p7 = new Polynomial(new int[] {2,-3,0,9});
		^
  symbol:   class Polynomial
  location: class test
test.java:105: error: cannot find symbol
		Polynomial p7 = new Polynomial(new int[] {2,-3,0,9});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:106: error: cannot find symbol
		Polynomial p8 = new Polynomial(new int[] {0,-1,4,0,0,2});
		^
  symbol:   class Polynomial
  location: class test
test.java:106: error: cannot find symbol
		Polynomial p8 = new Polynomial(new int[] {0,-1,4,0,0,2});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:107: error: cannot find symbol
		Polynomial p9 = new Polynomial(new int[] {0,0,0,0});
		^
  symbol:   class Polynomial
  location: class test
test.java:107: error: cannot find symbol
		Polynomial p9 = new Polynomial(new int[] {0,0,0,0});
		                    ^
  symbol:   class Polynomial
  location: class test
test.java:109: error: cannot find symbol
		testPolynomials = new Polynomial[] {p0,p1,p2,p3,p4,p5,p6,p7,p8,p9};
		                      ^
  symbol:   class Polynomial
  location: class test
33 errors
1 warning
